[dependencies]
criterion = "0.3"

[dependencies.plotters]
version          = "^0.3.1"
optional         = true
default-features = false
features         = ["svg_backend", "area_series", "line_series"]

[features]
stable = [
  "csv_output",
  "html_reports",
  "async_futures",
  "async_smol",
  "async_tokio",
  "async_std",
]
default = ["rayon", "plotters", "cargo_bench_support"]